fixed office logo and footer to align

--- a/website.css
+++ b/website.css
@@ -13,7 +13,7 @@ parent {
   position: relative;
   left: -1%;
   max-height: 500px;
-  width: 105%;
+  width: 101.8%;
   display: block;
   object-fit: cover;
   }
@@ -168,7 +168,7 @@ h2{
   text-align: center;
   color: white;
   left: -1%;
-  width: 105%;
+  width: 101%;
   bottom: 0;
   height: 5rem; 
 }
